src/test/deca/syntax/valid/objet/ClassDeclBodyVar.deca
// Description : test déclaration d'une classe avec body(field seulement) sans extension
// Resultats : ok

class Thing {
    protected int i;
}
