src/test/deca/syntax/invalid/ClassFieldSansNom.deca
//Field dans une classe sans nom

class Thing {
    
    protected ;

}
